Fix jump menu alignment

--- a/style.scss
+++ b/style.scss
@@ -5735,7 +5735,7 @@ img.media-element {
     }
 }
 .pane-bikeabout-issue-selection-panel-pane-1 {
-    #ctools-jump-menu .form-type-select {
+    #ctools-jump-menu {
         text-align: center;
         
         label, select {
